--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,7 +6,8 @@
             <action android:name="android.intent.action.TTS_SERVICE"/>
         </intent>
     </queries>
-    
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:label="quiz_time"
