--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,9 +26,23 @@ dependencies:
 
 
 
+
+
+
+
+
 dev_dependencies:
+  flutter_launcher_icons: "^0.13.1"
   flutter_test:
     sdk: flutter
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/quiz.png"
+  min_sdk_android: 21
+
+
 
 
   flutter_lints: ^3.0.0
